# llm-pareto

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  index.html  manage_data.py  pyproject.toml
css/: styles.css
data/: manifest.json  models.json  sources.json
data/benchmarks/: agentic.json  categories.json  coding.json  knowledge.json  math.json
data/models/: deepseek.json  google.json  meta.json  minimax.json  mistral.json  moonshot.json  qwen.json  xai.json  zhipu.json
data/models/anthropic/: claude_3.json  claude_4_haiku.json  claude_4_opus.json  claude_4_sonnet.json
data/models/openai/: gpt_3.json  gpt_4.json  gpt_5.1.json  gpt_5_2.json  gpt_5_2_pro.json  gpt_5_2_thinking.json  gpt_5_base.json  gpt_5_mini.json  o_series.json
data/models/qwen/: qwen3_235b_a22b.json  qwen3_30b_a3b.json  qwen3_32b.json  qwen3_4b.json
js/: app.js
scripts/: README.md  collect_data.py  llm_parser.py  screenshot.py  split_models.py
scripts/scrapers/: base.py  pricing.py
